refactor : 로또 생성 로직 수정